# MurmuraScope

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEEP_REVIEW_PROMPT.md  Dockerfile  LICENSE  MORAI_CAPABILITIES_AUDIT.md  MURMURASCOPE_VS_MIROFISH_PROMPT.md  Makefile  README.md  UPGRADE.md  UPGRADE_PLAN.md  docker-compose.dev.yml  docker-compose.yml  generate_300_agents.py  murmurascope_vs_mirofish_audit.md  package.json  pyproject.toml  test_norm.py
.github/workflows/: ci.yml  publish-image.yml
backend/: run.py
backend/app/: __init__.py  config.py
backend/data_pipeline/: calibration.py  censtatd_downloader.py  census_downloader.py  china_macro_downloader.py  data_normalizer.py  data_provenance.py  data_quality.py  discuz_forum_scraper.py  domain_dispatcher.py  download_all.py  economy_downloader.py  education_downloader.py  employment_downloader.py  fred_downloader.py  google_trends_downloader.py  hk_historical_seeder.py  hk_reference_data.py  hk_retail_tourism_downloader.py  hkgolden_downloader.py  lihkg_downloader.py  market_downloader.py  migration_parser.py  news_rss_downloader.py  property_downloader.py  rvd_downloader.py  scheduler.py  shock_calibration_data.py  social_sentiment_processor.py  stock_downloader.py  trade_downloader.py  transport_downloader.py  weather_downloader.py  yfinance_downloader.py
backend/database/: schema.sql
backend/prompts/: agent_generation_prompts.py  company_prompts.py  config_prompts.py  consensus_debate_prompts.py  decision_prompts.py  domain_prompts.py  implicit_stakeholder_prompts.py  macro_prompts.py  memory_init_prompts.py  memory_prompts.py  narrative_prompts.py  ontology_prompts.py  persona_templates.py  reflection_prompts.py  relationship_prompts.py  report_prompts.py  scenario_generation_prompts.py  text_processor_prompts.py  universal_decision_prompts.py  world_event_prompts.py
backend/scripts/: action_logger.py  audit_agents.py  debug_import.py  migrate_memories_to_vectors.py  run_facebook_simulation.py  (+5 more)
data/: calibration_coefficients.json
docs/: UPGRADE_PLAN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js
scripts/: benchmark_graph_accuracy.py  demo.sh  install.sh  quickstart.sh
(+521 files in other folders)
