[project]
name = "murmuroscope"
version = "0.1.0"
description = "Hong Kong Society Simulation Engine — multi-agent social simulation powered by OASIS"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "statsforecast>=1.7",
    "statsmodels>=0.14",
    "apscheduler>=3.10",
    "yfinance>=0.2.36",
    "feedparser>=6.0",
    "pytrends>=4.9.0",
    "transformers>=4.35",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "arch>=5.0",
    "SALib>=1.5",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "scipy>=1.12",
    "tiktoken>=0.7.0",
    "weasyprint>=62.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
markers = [
    "integration: tests that use database or HTTP client fixtures (auto-applied)",
    "slow: tests that take >10s (manual marker)",
]

[tool.coverage.run]
source = ["backend/app"]
omit = ["backend/tests/*", "backend/scripts/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
